Fix title wrapping in floating player

--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -91,6 +91,10 @@
   .content__info {
     .claim-preview__title {
       .button {
+        width: 100%;
+        .button__label {
+          display: inline-block;
+        }
         &:hover {
           color: var(--color-primary);
         }
